<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CreateNoteActivity">

    <EditText
        android:id="@+id/ET_note_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/note_name_hint"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#8F8F8F"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ET_note_text"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_content_hint"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_note_name"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/b_update"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="saveNote"
        android:text="@string/save_note_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_note_text" />
</androidx.constraintlayout.widget.ConstraintLayout>